# reserved-instance-coverage-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
reports/ri-cost-coverage-report-2025-05-23/: ri-cost-coverage-report.html
reports/ri-cost-coverage-report-2025-06-07/: ri-cost-coverage-report.html
reports/ri-target-coverage-report-2025-05-23/: ri-target-coverage-report.html
reports/ri-target-coverage-report-2025-06-07/: ri-target-coverage-report.html
samples/: README.md  rds-ri-coverage-past-30days.csv  rds-ri-recommendations-past-30days.csv  rds-ri-utilization-past-30days.csv
src/ri_coverage_analytics/: config.py  coverage_report.py  coverage_result.py  data_processor.py  main.py  output_format.py  reference_doc_transformer.py  utils.py
tests/: conftest.py  test_data_processor.py  test_utils.py
